--- a/package.json
+++ b/package.json
@@ -1,29 +1,29 @@
 {
-  "name": "exchange4",
+  "name": "pagination-test",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.12.3",
-    "@react-hook/debounce": "^4.0.0",
-    "@reduxjs/toolkit": "^1.6.1",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "@types/react": "^17.0.24",
+    "@types/react-redux": "^7.1.18",
+    "@typescript-eslint/eslint-plugin": "^4.31.2",
     "axios": "^0.21.4",
     "bootstrap": "^5.1.1",
     "classnames": "^2.3.1",
+    "eslint": "^7.32.0",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
-    "react-bootstrap": "^2.0.0-rc.0",
     "react-dom": "^17.0.2",
+    "react-paginate": "^7.1.3",
     "react-redux": "^7.2.5",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "redux": "^4.1.1",
     "redux-devtools-extension": "^2.13.9",
-    "redux-logger": "^3.0.6",
     "redux-saga": "^1.1.3",
-    "redux-thunk": "^2.3.0",
+    "typescript": "^4.4.3",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
@@ -51,7 +51,7 @@
     ]
   },
   "devDependencies": {
-    "eslint": "^7.32.0",
-    "eslint-plugin-react": "^7.26.0"
+    "@types/react-dom": "^17.0.9",
+    "@types/react-router-dom": "^5.3.0"
   }
 }
